# Pyre

./: .gitignore  AGENTS.md  CONVENTIONS.md  README.md  pixi.toml  pyproject.toml
docs/: llms-max-guides.txt  llms-python.txt
pyre/: __main__.py  cli.py  core.py
scripts/: uninstall.sh
src/attention/: builder.py
src/ffn/: builder.py
src/kernels/mojo/: comm.mojo
src/orchestrator/: __init__.py  cluster.py  generator.py  graph_reuse.py  llama_loader.py  mdns.py  net.py  protocol.py  quantizer.py  root_node.py  worker_node.py
src/partitioner/: solver.mojo
tests/: test_attention_builder.py  test_comm.mojo  test_distributed_cluster.py  test_ffn_builder.py  test_gemma4_e2e.py  test_generation.py  test_orchestrator.py  test_solver.mojo
